--- a/mymoney.css
+++ b/mymoney.css
@@ -1,1 +1,27 @@
 /* CSS declarations go here */
+.selected {
+  background-color: LightGray;
+}
+
+li {
+  position: relative;
+  list-style: none;
+  padding: 5px;
+  border-bottom: #eee solid 1px;
+}
+
+li .text {
+  margin-left: 5px;
+}
+
+.nav a {
+  color: #5a5a5a;
+  font-size: 11px;
+  font-weight: bold;
+  padding: 5px;
+  text-transform: uppercase;
+}
+
+.nav li {
+  display: inline;
+}
