--- a/mymoney.css
+++ b/mymoney.css
@@ -25,3 +25,32 @@ li .text {
 .nav li {
   display: inline;
 }
+
+.jumbotron {
+  background-image:url('http://www.fubiz.net/wp-content/uploads/2013/02/Mountains-of-Mist171.jpg');
+/*  background-color:#eee;
+background-image:bank.jpg;
+  padding:30px;
+  padding-right:60px;
+  padding-left:60px; */
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.jumbotron .container {
+  position: relative;
+  top:100px;
+}
+
+.jumbotron h1 {
+  color: #fff;
+  font-size: 48px;
+  font-family: 'Shift', sans-serif;
+  font-weight: bold;
+}
+
+.jumbotron p {
+  font-size: 20px;
+  color: #fff;
+}
